--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.0.0",
+    "react-spinkit": "^3.0.0",
     "redux": "^3.7.1",
     "redux-form": "^6.6.3",
     "redux-promise": "^0.5.3"
